force-app/main/default/objects/Survey_Responses__c/Survey_Responses__c.object-meta.xml
<CustomObject>
    <label>Survey Responses</label>
    <nameField>
        <label>Survey Responses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>