force-app/main/default/objects/Survey_Responses__c/fields/Is_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Is_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Attachment</label>
    <type>Checkbox</type>
</CustomField>