force-app/main/default/objects/Survey_Responses__c/fields/Submission_ID__c.field-meta.xml
<CustomField>
    <fullName>Submission_ID__c</fullName>
    <label>Submission ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>